# configurate-rs

./: .gitignore  Cargo.toml  dagger.cue
.fleet/: run.json
.github/workflows/: dagger.yml
src/: lib.rs  node_path.rs
src/path/: buf.rs  mod.rs
