[package]
name = "configurate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erased-serde = "0.3.23"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = { version = "0.9.13", optional = true }
thiserror = "1.0.35"

[dev-dependencies]
indoc = "1.0.7"

[features]
yaml = ["serde_yaml"]
